--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="wrapper">
         <div class="cover cover-left"></div>
-        <div class="cover cover-right turn"></div>
+        <div class="cover cover-right "></div>
         <div class="book">
         <div class="book-page page-left">
             <div class="profile-page">
-                <img src="WhatsApp Image 2025-05-09 at 20.03.58.jpeg" class="image"alt="My Image">
+                <img src="mypic.jpeg" class="image"alt="My Image">
                 <h1>Priyanshu kumar</h1>
                 <h3>Web Developer & A Programer</h3>
 
@@ -45,7 +45,7 @@
 
 
           <div class="page-front">
-               <h1 class="title">About Me</h1>
+               <h1 class="title">About Me!</h1>
                <br>
                <div class="about">
                 <ul>
@@ -53,6 +53,9 @@
 
                     My goal is to become a skilled and impactful web developer, constantly improving through hands-on projects and continuous learning. I take pride in giving my best to every task I undertake and believe in learning by doing. Whether it's front-end design or back-end logic, I enjoy every part of the development process.</p></li>
                 </ul>
+               </div>
+               <div class="img">
+                <img src="campus.jpeg" alt="campus image">
                </div>
 
                <span class="number-page">1</span>
@@ -68,7 +71,7 @@
 
 
            <div class="page-back">
-            <h1 class="title">Education</h1>
+            <h1 class="title">My Education!</h1>
                <br>
                <div class="workeduc-box">
                 <div class="workeduc-content">
@@ -116,7 +119,7 @@
 
           
             <div class="page-front">
-              <h1 class="title"> My Skills</h1>
+              <h1 class="title"> My Skills!</h1>
               <br><br>
             <div class="skills-box">
               <div class="skills-content">
@@ -150,7 +153,7 @@
 
 
           <div class="page-back">
-              <h1 class="title">My Experience</h1>
+              <h1 class="title">My Experience!</h1>
               <div class="ex">
                 <i class='bx bxs-error' ></i>
               </div>
@@ -173,7 +176,10 @@
 
 
           <div class="page-front">
-            <h1 class="title">My Projects</h1>
+            <h1 class="title">My Projects!</h1>
+            <div class="ex">
+              <i class='bx bxs-error' ></i>
+            </div>
             <span class="number-page">5</span>
              <span class="nextprev-btn" data-page="turn-3">
               <i class='bx bxs-chevrons-right' ></i> 
@@ -219,8 +225,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
